--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top-banner top">
+    <section class=" top-banner top">
         <div class="flexible">
             <h1 >Welcome to my portfolio</h1>
             <h1 id="color">Me Mahdin</h1>
@@ -25,6 +25,22 @@
             <img src="images/my-bg.png" alt="my pic">
         </div>
         
+
+    </section>
+
+    <section class="top-banner">
+<div class="flexible">
+<img src="images/my-bg2.png" alt="">
+</div>
+<div class="flexible bg">
+<h1>big dream</h1>
+<h2>become a web developer</h2>
+<p id="para">i know everything about web development.i can make any kind of website.if you neeed website ,you can contact with me.you can contact with me via facebook,whatsapp,linkdin, etc
+    thank you very much in advance.so i can show you some sample of my work,i know you will like my sample ve4y much>there's no way to ignore my golden sample
+</p>
+<a class="button" href="">download resume</a>
+
+</div>
 
     </section>
 </body>
