--- a/index.html
+++ b/index.html
@@ -43,5 +43,23 @@
 </div>
 
     </section>
+    <section class="four" >
+        <h1>experience</h1>
+        <div class="top-banner text ">
+<div class="one">
+    <h1>FULL stack developer</h1>
+    <h3>2021-2022 present</h3>
+    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi modi nobis quibusdam voluptate quas blanditiis? Ullam vitae veniam voluptatum perferendis nisi reprehenderit autem vel libero fugit reiciendis eligendi rerum illum similique consequuntur repudiandae, hic cum architecto ratione velit cumque voluptate temporibus est aliquid! Autem itaque temporibus voluptatum aperiam ducimus sunt, pariatur nobis, quibusdam error mollitia corrupti rerum nesciunt reiciendis fugiat.
+
+    </p>
+</div>
+<div class="two"><h1>
+    baby web developer
+</h1>
+<h3> 2021 present</h3>
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam dolores neque totam facilis soluta tenetur. Eius numquam deleniti voluptate ab. Quam illum dolorum omnis minima culpa voluptates beatae debitis quidem, dolor unde consequuntur quos, non dicta, eius reiciendis dolorem sed. Ea recusandae, eum asperiores aperiam nisi harum id! Facere cupiditate culpa ullam impedit voluptatibus, vero tempora suscipit nulla dolorem vel similique soluta ad id aliquam.</p>
+</div>
+        </div>
+    </section>
 </body>
 </html>
